@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.443 2006/12/11 14:15:59 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.444 2006/12/12 15:47:39 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -347,6 +347,9 @@ MH/01 local_scan ABI version incremented to 1.1. It should have been updated
 
 PH/51 Error processing for expansion failure of helo_data from an smtp
       transport during callout processing was broken.
+
+PH/52 Applied John Jetmore's patch to allow tls-on-connect and STARTTLS to be
+      tested/used via the -bh/-bhc/-bs options.
 
 
 Exim version 4.63
